src/engine/snapshots/rush_qdrant__engine__partitioner__tests__project_watcher_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 99.6%
Total chunks: 6
Tiny chunks (<20 lines): 0
Lines: 46-116 (mean 91.0)

=== CHUNK 1 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:[fallback-split]
Type: code
Kind: content
Symbol: None
Lines: 1-46
Size: 1656 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import * as fs from 'node:fs';
import * as os from 'node:os';

=== CHUNK 2 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:[fallback-split]
Type: code
Kind: content
Symbol: None
Lines: 47-152
Size: 3709 chars
Text preview (5 lines):

/**
 * This class is for incrementally watching a set of projects in the repository for changes.
 *
 * We are manually using fs.watch() instead of `chokidar` because all we want from the file system watcher is a boolean

=== CHUNK 3 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:ProjectWatcher:[fallback-split]
Type: class
Kind: content
Symbol: Some("ProjectWatcher")
Lines: 153-223
Size: 3383 chars
Text preview (5 lines):

  /**
   * Waits for a change to the package-deps of one or more of the selected projects, since the previous invocation.
   * Will return immediately the first time it is invoked, since no state has been recorded.
   * If no change is currently present, watches the source tree of all selected projects for file changes.

=== CHUNK 4 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:waitForChangeAsync:[fallback-split]
Type: function
Kind: content
Symbol: Some("waitForChangeAsync")
Lines: 224-327
Size: 3571 chars
Text preview (5 lines):

    const watchedResult: IProjectChangeResult = await new Promise(
      (resolve: (result: IProjectChangeResult) => void, reject: (err: Error) => void) => {
        let timeout: NodeJS.Timeout | undefined;
        let terminated: boolean = false;

=== CHUNK 5 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:waitForChangeAsync:[fallback-split]
Type: function
Kind: content
Symbol: Some("waitForChangeAsync")
Lines: 328-430
Size: 3330 chars
Text preview (5 lines):
          terminated = true;
          terminal.writeLine();
          reject(err);
        }


=== CHUNK 6 ===
Breadcrumb: rush-lib:ProjectWatcher.ts:ProjectWatcher:[fallback-split]
Type: class
Kind: content
Symbol: Some("ProjectWatcher")
Lines: 431-546
Size: 3408 chars
Text preview (5 lines):

  private _setStatus(status: string): void {
    const statusLines: string[] = [
      `[${this.isPaused ? 'PAUSED' : 'WATCHING'}] Watch Status: ${status}`,
      ...(this._getPromptLines?.(this.isPaused) ?? [])
